# modos-rs

./: .component.yaml  .editorconfig  .env.tmpl  .envrc  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  justfile
.github/workflows/: format.yaml  normal.yaml
components/comp-rust/: .component.yaml  .envrc  justfile  rust-analyzer.toml
components/comp-rust/api/: openapi.json
components/comp-rust/src/common/: Cargo.toml
components/comp-rust/src/common/src/: lib.rs
components/comp-rust/src/common/src/log/: mod.rs
components/comp-rust/src/common/src/response/: create.rs
components/comp-rust/src/common/src/tracing/: mod.rs  result.rs
components/comp-rust/src/pdf-render/: Cargo.toml
components/comp-rust/src/pdf-render/src/: lib.rs  render.rs
components/comp-rust/src/service/src/: config.rs  http.rs  openapi.rs  state.rs
components/comp-rust/tools/nix/pkgs/: comp.parts.nix
components/gateway/: .component.yaml  go.mod  go.sum  justfile
components/gateway/cmd/service/: args.go  main.go
components/gateway/cmd/test/: main.go
components/gateway/data/config/: config.yaml
components/gateway/internal/config/: config.go
components/gateway/tools/nix/pkgs/: default.nix  gateway.parts.nix
components/keycloak-mapper/: .component.yaml  README.md  pom.xml
components/keycloak-mapper/tools/nix/pkgs/: keycloak-mapper.parts.nix
components/kms/: .component.yaml  .envrc  Cargo.toml  go.mod  go.sum  justfile
components/kms/api/: openapi.json  openapi.yaml
components/kms/cmd/service/: args.go  main.go
components/kms/data/: .gitignore
components/kms/data/config/: config.yaml  secrets.yaml
components/kms/internal/config/: config.go
components/kms/pkg/storage/: init.go
components/kms/pkg/storage/s3/: const.go  init.go  storage.go
components/kms/pkg/storage/types/: client.go  config.go
components/kms/src/service/: Cargo.toml
components/kms/src/service/src/: handler.rs  lib.rs
components/kms/tools/configs/buf/: buf.yaml
components/kms/tools/nix/pkgs/: default.nix  kms.parts.nix
tools/configs/authentik/: justfile  modos-blueprint.yaml  modos-brand-blueprint.yaml  modos-enrollment-blueprint.yaml  modos-groups-users-blueprint.yaml  modos-oauth-blueprint.yaml  schema.json
tools/configs/codecov/: codecov.yaml
tools/configs/git-cliff/: config.toml
tools/configs/golangci-lint/: golangci.yaml
tools/configs/keycloak/: modos-realm.json
tools/configs/prek/: prek.toml
tools/configs/prettier/: prettierrc.yaml
tools/configs/quitsh/: README.md  config-ci.yaml  config.yaml
tools/configs/rust/: rust-toolchain-release.toml  rust-toolchain-shell.toml  rustfmt.toml
tools/configs/rustfs/iam-export/iam-assets/: group_mappings.json  groups.json  policies.json  users.json
tools/configs/taplo/: taplo.toml
tools/configs/trivy/: trivy.yaml
tools/configs/typos/: typos.toml
tools/just/: changelog.just  ci.just  devenv.sh  jwt.just  nix.just  services.just
tools/nix/: flake.nix
tools/nix/flake/: modos-args.parts.nix  modos-options.parts.nix  modos-outputs.parts.nix  modos.parts.nix  nixpkgs.parts.nix
tools/nix/lib/: extend.nix  nixpkgs.parts.nix  shell.parts.nix  toolchain.parts.nix
tools/nix/lib/common/: attrset.nix  yaml.nix
tools/nix/lib/component/: general.parts.nix  query.parts.nix
tools/nix/lib/service/: authentik.nix  garage.nix  keycloak.nix  mailhog.nix  rustfs.nix  service.parts.nix
tools/nix/lib/service/authentik/: options.nix  service.nix
tools/nix/lib/service/keycloak/: devenv.nix  options.nix  service.nix
tools/nix/modos/: build.parts.nix  components.parts.nix  fileset.parts.nix  modos.parts.nix  repo.parts.nix
tools/nix/modos/image/: default.parts.nix
tools/nix/modos/lib/: extend.parts.nix  fileset.nix  lib.parts.nix  nixpkgs.nix  nixpkgs.parts.nix  shell.nix  toolchain-services.nix  toolchain.nix  toolchain.parts.nix  yaml.nix
tools/nix/modos/lib/common/: common.parts.nix  yaml.nix
tools/nix/modos/lib/component/: default.nix  packages.nix  query.nix
tools/nix/modos/lib/image/: default.nix
tools/nix/modos/lib/services/: default.nix  (+1 more)
tools/nix/modos/pkgs/: bootstrap.parts.nix  build.parts.nix  comps.parts.nix  lib-build.parts.nix  lib.parts.nix  quitsh.parts.nix  shells.parts.nix  treefmt.parts.nix
tools/nix/pkgs/: bootstrap.parts.nix  shells.parts.nix  treefmt.nix  treefmt.parts.nix
tools/nix/services/: README.md  test.parts.nix
tools/nu/: device-code-flow.nu
tools/quitsh/: .component.yaml  .gitignore  go.mod  go.sum  justfile
tools/quitsh/cmd/quitsh/: main.go
tools/quitsh/pkg/config/: config.go
tools/quitsh/pkg/runner/: register.go
tools/quitsh/pkg/setup/: setup.go
tools/quitsh/test/: integration_test.go
tools/quitsh/tools/scripts/: .common.sh  update-quitsh-version.sh
(+36 files in other folders)
